# ifut3

./: Application.hs  Foundation.hs  Main.hs  README.md  client_session_key.aes  haskell-p2.cabal  routes
Handlers/: Course.hs  Enrollment.hs  Frequency.hs  Home.hs  Login.hs  User.hs
