name:               haskell-p2
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: routes

executable          haskell-p2
  main-is:          Main.hs
  other-modules:    Application
                    Foundation

                    Handlers.Home
                    Handlers.User
                    Handlers.Login
                    Handlers.Course
                    Handlers.Enrollment
                    Handlers.Frequency

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends: base                          
                 , yesod                        
                 , yesod-auth                    
                 , yesod-static 
                 , yesod-core
                 , yesod-form
                 , bytestring                   
                 , text                          
                 , persistent
                 , persistent-postgresql            
                 , monad-logger
                 , shakespeare
                 , pwstore-fast
                 , string-conversions
                 , bytestring-conversion
                 , base64-bytestring


  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
